sample-network/config/explorer/blockchain-explorer-template-v2.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  explorer-v2
  namespace: ${NETWORK_NAME}
  labels:
    app:  explorer-v2
spec:
  selector:
    matchLabels:
      app: explorer-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: explorer-v2
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
        - name: explorer-v2
          image: 192.168.0.205:30002/ks-devops-harbor/miaoyin-blockchain-explorer-v2:${IMAGE_VERSION}
          ports:
            - containerPort: 8080
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: explorer-v2
  namespace: ${NETWORK_NAME}
spec:
  selector:
    app: explorer-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: explorer-node-v2
  namespace: ${NETWORK_NAME}
spec:
  type: NodePort
  selector:
    app: explorer-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32201
