sample-network/config/explorer/blockchain-explorer-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  explorer
  namespace: ${NETWORK_NAME}
  labels:
    app:  explorer
spec:
  selector:
    matchLabels:
      app: explorer
  replicas: 1
  template:
    metadata:
      labels:
        app: explorer
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
        - name: explorer
          image: 192.168.0.205:30002/library/miaoyin-blockchain-explorer:${IMAGE_VERSION}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: crypto
              mountPath: /tmp/crypto
            - name: wallet
              mountPath: /opt/explorer/wallet
            - name: explorer-config
              mountPath: /opt/explorer/app/platform/fabric/config.json
              subPath: config.json
            - name: explorer-config
              mountPath: /opt/explorer/app/platform/fabric/connection-profile/miaoyin-network.json
              subPath: miaoyin-network.json
            - name: key
              mountPath: /tmp/crypto/enrollments/org1/users/org1admin/msp/keystore/key.pem
              subPath: key.pem
            - name: cert
              mountPath: /tmp/crypto/enrollments/org1/users/org1admin/msp/signcerts/cert.pem
              subPath: cert.pem
            - name: tlsca
              mountPath: /tmp/crypto/channel-msp/peerOrganizations/org1/msp/tlscacerts/tlsca-signcert.pem
              subPath: tlsca-signcert.pem
      volumes:
        - name: wallet
          persistentVolumeClaim:
            claimName: explorer-wallet-pv-claim
        - name: crypto
          persistentVolumeClaim:
            claimName: explorer-crypto-pv-claim
        - name: explorer-config
          configMap:
            name: explorer-config
        - name: key
          configMap:
            name: explorer-key-config
        - name: cert
          configMap:
            name: explorer-cert-config
        - name: tlsca
          configMap:
            name: explorer-tlsca-config
          
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: explorer
  namespace: ${NETWORK_NAME}
spec:
  selector:
    app: explorer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: explorer-node
  namespace: ${NETWORK_NAME}
spec:
  type: NodePort
  selector:
    app: explorer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32201
