sample-network/config/explorer/cert-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer-ingress
  namespace: fabric-network
  labels:
    exposed_by: ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "explorer-selfsigned" #此处我们是基于issuer颁发一个prod的证书
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - explorer.miaoyinchain.com
      secretName: explorer-selfsigned-cert
  rules:
    - host: explorer.miaoyinchain.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: explorer
                port:
                  number: 8080
