sample-network/config/explorer/explorer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer-ingress
  namespace: miaoyin-fabric-network
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - explorer.miaoyinchain.com
      secretName: miaoyinchain-secret
  rules:
    - host: explorer.miaoyinchain.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: explorer
              port:
                number: 8080
